# ApexDiscovery

./: .dockerignore  .gitignore  AGENTS.md  CITATION.cff  Dockerfile  LICENSE  PROGRESS.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
.opencode/skills/my-skill/: SKILL.md
apps/biologic-universe/: .gitignore  README.md  biologic-universe-mcp.mjs  biologic-universe-query.mjs  package-lock.json  package.json  server.mjs
apps/biologic-universe/test/: history.test.mjs  mcp.test.mjs  query.test.mjs
apps/biologic-universe/viz/: showcase_build.py
apps/claude-bridge/: package.json
apps/claude-bridge/scripts/: test-gpt-model.mjs
apps/claude-bridge/src/: server.mjs
apps/codex-bridge/: package.json
apps/codex-bridge/src/: claude-agent-mcp.mjs  claude-agent.mjs  claude-agent.test.mjs  codex-app-server.mjs  codex-app-server.test.mjs  codex-client-config.mjs  codex-client-config.test.mjs  codex-sandbox.mjs  codex-sandbox.test.mjs  command-description.mjs  command-description.test.mjs  execution-result.mjs  execution-result.test.mjs  extensions.mjs  extensions.test.mjs  inline-citations.mjs  inline-citations.test.mjs  main-agent-prompt.mjs  main-agent-prompt.test.mjs  network-broker.mjs  network-broker.test.mjs  research-mcp.mjs  research-result.mjs  research-result.test.mjs  research-routing.mjs  research-routing.test.mjs  reviewer.mjs  reviewer.test.mjs  science-execution.mjs  science-execution.test.mjs  science-job-worker.mjs  science-mcp.mjs  server.integration.test.mjs  server.mjs  subagents.mjs  subagents.test.mjs  (+3 more)
apps/desktop/: .eslintrc.cjs  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: artifact_file.rs  compute.rs  debug_log.rs  examples.rs  git_snapshot.rs  harness.rs  hpc.rs  jupyter.rs  kernel.rs  keychain.rs  large_file.rs  lib.rs  main.rs  modal.rs  opencode_config.rs  preview_server.rs  provenance.rs  runs.rs  runs_index.rs  runtime.rs  science_mcp.rs  tools.rs  updates.rs  uv.rs
apps/molecules-opportunity-atlas/: README.md  package-lock.json  package.json
apps/server/: Cargo.toml
apps/server/src/: auth.rs  commands.rs  extensions.rs  files.rs  main.rs  proxy.rs  sidecar.rs  state.rs
apps/server/tests/fixtures/paper-plugin/: .mcp.json
apps/server/tests/fixtures/paper-plugin/.codex-plugin/: plugin.json
apps/server/tests/fixtures/paper-plugin/skills/paper-search/: SKILL.md
crates/shell-core/: Cargo.toml
crates/shell-core/src/: artifact.rs  assets.rs  ctx.rs  debug_log.rs  git_snapshot.rs  large_file.rs  lib.rs  preview.rs  provenance.rs  runs.rs  runs_index.rs  runtime.rs  runtime_config.rs  util.rs
docs/: APP_OPERATOR.md  CONNECT_YOUR_TOOLS.md  PRD.md  REQUIREMENTS.md  TECHNICAL_DESIGN.md  open-science-desktop-vs-openscience.md
docs/research/: 2026-07-05-multidiscipline-needs.md
examples/bci-trends/: .codegraph  README.md
examples/climate-trends/: README.md
runtime/apex-runtime-profile/: README.md
runtime/harness/: AGENTS.md  KNOWLEDGE.md  README.md
runtime/hermes-profile/: README.md
runtime/kernel/: kernel_bridge.R  kernel_bridge.py
runtime/manager/: README.md
runtime/mcp/: README.md
runtime/opencode-profile/: README.md
runtime/skills/: README.md
scripts/dev/: fetch-opencode.sh  fetch-skills.sh  fetch-uv.sh  prepare-codex-runtime.mjs  test_domain_check.py  test_large_file_probe.py  test_pdf_extract.py  test_record_run_guard.py  test_stats_integrity.py
scripts/release/: package-browser.mjs
website/: molecules-opportunity-atlas.html
(+274 files in other folders)
