[package]
name = "ai4s-workbench"
version = "0.1.9"
description = "Open Science Desktop"
authors = ["AI4S Workbench contributors"]
edition = "2021"

[lib]
name = "ai4s_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Already in the tree via tauri — used directly for stall timeouts on uv setup.
tokio = { version = "1", features = ["time"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
getrandom = "0.4.3"
opener = { version = "0.8.5", features = ["reveal"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "native-tls"] }
