[package]
name = "ai4s-workbench"
version = "0.1.9"
description = "APEX Science Desktop"
authors = ["AI4S Workbench contributors"]
edition = "2021"

[lib]
name = "ai4s_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Shared command core (also used by the self-hosted web server).
shell-core = { path = "../../../crates/shell-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Already in the tree via tauri — used directly for stall timeouts on uv setup.
tokio = { version = "1", features = ["time"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
opener = { version = "0.8.5", features = ["reveal"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "native-tls"] }
